Fix failing unit tests due to immutability.
Signed-off-by: currantw <taylor.curran@improving.com>